Fix overflowing table style

--- a/ninteen-thirty-four/sass/elements/_elements.scss
+++ b/ninteen-thirty-four/sass/elements/_elements.scss
@@ -30,6 +30,11 @@ figure {
   margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
 }
 
+.wp-block-table {
+  max-width: calc(100vw - 60px);
+  overflow-x: scroll;
+}
+
 @import "tables";
 
 @import "grid";
